<resources>
    <string name="app_name">贩聚社团</string>
    <string name="no_network_connection_toast">网络连接不可用</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="image_content_description">图片</string>
    <string name="custom_date_picker_cancle">取消</string>
    <string name="custom_date_picker_title">请选择时间</string>
    <string name="custom_date_picker_commit">确定</string>
    <string name="custom_date_picker_year">年</string>
    <string name="custom_date_picker_month">月</string>
    <string name="custom_date_picker_day">日</string>
    <string name="custom_date_picker_hour">时</string>
    <string name="custom_date_picker_minute">分</string>
    <string name="tips_hanlding">处理中...</string>
    <string name="tips_noproduct">暂无商品</string>
    <string name="tips_nocanuse">不可使用</string>
    <string name="dlg_title_numkey">请输入取货码</string>
    <string name="aty_smlogin_navtitle">登录</string>
    <string name="aty_smlogin_etph_username">用户名</string>
    <string name="aty_smlogin_etph_password">密码</string>
    <string name="aty_smlogin_btntx_login">登录</string>
    <string name="aty_pay_navtitle">支付</string>
    <string name="aty_payway_navtitle">选择支付方式</string>
    <string name="aty_productdetails_navtitle">商品详情</string>
    <string name="aty_productdetails_btntx_increase">加入购物车</string>
    <string name="aty_productdetails_btntx_buy">立即购买</string>
    <string name="aty_productkind_navtitle">全部商品</string>
    <string name="aty_productkind_btntx_gosettlement">去结算</string>
    <string name="aty_productkind_btntx_gotongguanpayparner">去支付</string>
    <string name="aty_productkind_tvtx_amountsum">合计：</string>
    <string name="aty_smdeviceinfo_navtitle">设备信息</string>
    <string name="aty_smdeviceinfo_tvtx_merchantname">商户名称</string>
    <string name="aty_smdeviceinfo_tvtx_devicestatus">设备状态</string>
    <string name="aty_smdeviceinfo_tvtx_scanganstatus">扫描器状态</string>
    <string name="aty_smdeviceinfo_tvtx_storename">店铺名称</string>
    <string name="aty_smdeviceinfo_tvtx_shopname">门店名称</string>
    <string name="aty_smdeviceinfo_tvtx_shopaddress">门店地址</string>
    <string name="aty_smdeviceinfo_tvtx_deviceid">设备编码</string>
    <string name="aty_smdeviceinfo_tvtx_localtion">地理位置</string>
    <string name="aty_smdeviceinfo_tvtx_paytimeout">支付超时（秒）</string>
    <string name="aty_smdeviceinfo_tvtx_versionname">程序版本号</string>
    <string name="aty_smdeviceinfo_tvtx_cabinetctrlsdkversionbyds">设备控制版本号</string>
    <string name="aty_smdeviceinfo_tvtx_comname">COM.N</string>
    <string name="aty_smdeviceinfo_tvtx_currency">货币</string>
    <string name="aty_smdeviceinfo_tvtx_currencysymbol">货币符号</string>
    <string name="aty_smdevicestock_navtitle">机器库存</string>
    <string name="aty_smdevicestock_tvtx_cabinetname">当前机柜</string>
    <string name="aty_smreplenishplan_navtitle">补货计划</string>
    <string name="aty_smreplenishplandetail_navtitle">补货计划详情</string>
    <string name="aty_cart_navtitle">购物车</string>
    <string name="aty_cart_btntx_goshopping">去逛一逛商品</string>
    <string name="aty_cart_btntx_gopay">去支付</string>
    <string name="aty_cart_tips_cartisnull">购物车为空，请逛一逛商品</string>
    <string name="aty_cart_tips_cartismust">购物车为空，请先加入购物车</string>
    <string name="aty_cart_confirmtips_delete">从购物车里删除该商品?</string>
    <string name="aty_cart_confirmtips_payclose">确认要退出支付?</string>
    <string name="aty_initdata_btntx_retry">重试</string>
    <string name="aty_initdata_tvtx_loadingmsg">正在初始化数据...</string>
    <string name="aty_initdata_tips_retry">重试连接</string>
    <string name="aty_initdata_tips_settingdevice">正在配置商户设备信息</string>
    <string name="aty_initdata_tips_settingdevicecfgreadsuccess">读取商户设备配置信息成功</string>
    <string name="aty_initdata_tips_settingdevicecfgreadfailure">读取商户设备配置信息失败</string>
    <string name="aty_initdata_tvtx_deviceid">设备标识</string>
    <string name="aty_initdata_tvtx_version">应用版本</string>
    <string name="aty_initdata_tvtx_comname">COM.N</string>
    <string name="aty_smhome_navtitle">设置中心</string>
    <string name="aty_smhome_ngtitle_stockset">库存设置</string>
    <string name="aty_smhome_ngtitle_replenishplan">补货计划</string>
    <string name="aty_smhome_ngtitle_deviceset">设备信息</string>
    <string name="aty_smhome_ngtitle_shownav">显示导航</string>
    <string name="aty_smhome_ngtitle_runexhandle">异常处理</string>
    <string name="aty_smhome_ngtitle_userinfo">用户信息</string>
    <string name="aty_smhome_ngtitle_hardware">硬件诊断</string>
    <string name="aty_smhome_ngtitle_checkupdateapp">检查更新</string>
    <string name="aty_smhome_ngtitle_closeapp">关闭应用</string>
    <string name="aty_smhome_ngtitle_rootsys">重启系统</string>
    <string name="aty_smhome_ngtitle_door">门锁开启</string>
    <string name="aty_smhome_ngtitle_exitmanager">退出管理</string>
    <string name="aty_smhome_confrimtips_closeapp">确定关闭应用？</string>
    <string name="aty_smhome_confrimtips_rootsys">确定重启系统？</string>
    <string name="aty_smhome_confrimtips_exitmanager">确定退出管理？</string>
    <string name="aty_smhome_confrimtips_door">确定打开/关闭柜门？</string>
    <string name="aty_smuserinfo_tvtx_fv_clickin">点击录入</string>
    <string name="aty_smuserinfo_tvtx_fv_hasdata">已录入</string>
    <string name="aty_smuserinfo_tips_confirmdel">确定要删除静脉指</string>
    <string name="aty_smuserinfo_tips_puthand">请将手指放入设备,再移开</string>
    <string name="aty_orderdetails_navtitle">订单详情</string>
    <string name="aty_orderdetaiks_tvtx_orderid">订单号</string>
    <string name="aty_orderdetails_btntx_pickupcompelte">完成取货</string>
    <string name="aty_orderdetails_btntx_contactkefu">联系客服</string>
    <string name="aty_orderdetails_tips_contactkefu">请打开微信扫一扫，联系客服</string>
    <string name="aty_orderdetails_confirmtips_pickup">确认已完成取货?</string>
    <string name="aty_smrunexhandle_navtitle">异常处理</string>
    <string name="dlg_confirm_btntx_cancle">否</string>
    <string name="dlg_confirm_btntx_sure">是</string>
    <string name="dlg_slotedit_tvtx_slotid">货道编号</string>
    <string name="dlg_slotedit_tvtx_slotname">货道名称</string>
    <string name="dlg_slotedit_tvtx_skucumcode">商品编码</string>
    <string name="dlg_slotedit_tvtx_skuname">商品名称</string>
    <string name="dlg_slotedit_tvtx_skuspecdes">商品规格</string>
    <string name="dlg_slotedit_tvtx_skusaleprice">商品价格</string>
    <string name="dlg_slotedit_tvtx_skusellqty">可售数量</string>
    <string name="dlg_slotedit_tvtx_skulockqty">锁定数量</string>
    <string name="dlg_slotedit_tvtx_skusumqty">实际数量</string>
    <string name="dlg_slotedit_tvtx_skumaxqty">最大数量</string>
    <string name="dlg_slotedit_tvtx_skuwrnqty">报警数量</string>
    <string name="tvtx_planrshqty">计划补充</string>
    <string name="tvtx_realrshqty">实际补充</string>
    <string name="btntx_save">保存</string>
    <string name="btntx_savedata">保存数据</string>
    <string name="btntx_fill">置满</string>
    <string name="btntx_delete">删除</string>
    <string name="btntx_pickuptest">测试取货</string>
    <string name="btntx_scanslot">扫描货道</string>
    <string name="btntx_onekeypickuptest">测试取货</string>
    <string name="btntx_recollotfingervein">重新采集</string>
    <string name="btntx_refreshstock">刷新库存</string>
    <string name="btntx_autotest">自动测试</string>
    <string name="btntx_rshplan">补货计划</string>
    <string name="btntx_goback">返回</string>
    <string name="btntx_handle">确认处理</string>
    <string name="btntx_replenished">确认已补货</string>
    <string name="btntx_starttestpickup">开始</string>
    <string name="btntx_pausetestpickup">暂停</string>
    <string name="btntx_stoptestpickup">停止</string>
    <string name="btntx_exittestpickup">退出</string>
    <string name="aty_smuserinfo_navtitle">用户信息</string>
    <string name="aty_smuserinfo_tvtx_username">用户账号</string>
    <string name="aty_smuserinfo_tvtx_fullname">用户姓名</string>
    <string name="aty_smuserinfo_tvtx_fingervein">指静脉況</string>
    <string name="aty_smhardware_navtitle">硬件诊断</string>
    <string name="tips_notpickupcompelte">商品取货未完成不能退出</string>
    <string name="ds_hd_btntx_connect">连接</string>
    <string name="zs_hd_title">格子柜(zs)</string>
    <string name="tvtx_com_id">串口:</string>
    <string name="tvtx_com_baud">波特:</string>
    <string name="zs_hd_tvtx_plateid">锁版ID:</string>
    <string name="zs_hd_tvtx_numid">箱子ID:</string>
    <string name="zs_hd_btntx_connect">连接</string>
    <string name="zs_hd_btntx_testopen">测试打开</string>
    <string name="zs_hd_btntx_teststatus">查询状态</string>
    <string name="wg_hd_title">扫描器(wg)</string>
    <string name="wg_hd_scanresult">扫描结果:</string>

    <string name="camera_btn_open">打开</string>
    <string name="camera_btn_close">关闭</string>
    <string name="camera_btn_captureStill">拍照</string>
    <string name="camera_btn_record">录像</string>
    <string name="camera_title_renlian">人脸摄像头"</string>
    <string name="camera_title_jigui">机柜"</string>
    <string name="camera_title_chuhuokou">出货口"</string>
    <string name="title_activity_video_call">VideoCallActivity</string>

    <string name="callvideo_recording_video">录制视频</string>
    <string name="callvideo_switch_camera">切换摄像头</string>
    <string name="callvideo_mute">静音</string>
    <string name="callvideo_hands_free">免提</string>
    <string name="callvideo_hang_up">挂断</string>
    <string name="callvideo_hanging_up">正在挂断……</string>
    <string name="callvideo_answer">接听</string>
    <string name="callvideo_switch">切换</string>
    <string name="callvideo_the_other_is_hang_up">对方已经挂断</string>
    <string name="callvideo_the_other_is_not_online">对方不在线</string>
    <string name="callvideo_is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="callvideo_illegal_user_name">用户名不合法</string>
    <string name="callvideo_the_other_is_on_the_phone">对方正在通话中</string>
    <string name="callvideo_can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="callvideo_call_duration">通话时长</string>
    <string name="callvideo_refused">已拒绝</string>
    <string name="callvideo_the_other_party_has_refused_to">对方已拒绝</string>
    <string name="callvideo_the_other_party_did_not_answer">对方未接听</string>
    <string name="callvideo_did_not_answer">未接听</string>
    <string name="callvideo_has_been_cancelled">已取消</string>
    <string name="callvideo_version_inconsistent">通话协议版本不一致</string>
    <string name="callvideo_direct_call">Direct</string>
    <string name="callvideo_relay_call">Relay</string>
    <string name="callvideo_the_other_party_refused_to_accept">对方拒绝接受！</string>
    <string name="callvideo_connection_failure">连接建立失败！</string>
    <string name="callvideo_the_other_party_is_not_online">对方不在线，请稍后再拨……</string>
    <string name="callvideo_the_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="callvideo_no_call_data">没有通话数据</string>
    <string name="callvideo_in_the_call">通话中……</string>
    <string name="callvideo_are_connected_to_each_other">正在连接对方……</string>
</resources>
