<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_nav_header" />


    <RelativeLayout
        android:id="@+id/layout_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <ListView
                android:id="@+id/lv_Cabinets"
                android:layout_width="@dimen/size_60"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:divider="@null"
                android:fadingEdge="none"
                android:overScrollMode="never"
                android:scrollbars="none" />

        <LinearLayout
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:paddingLeft="@dimen/size_10"
            android:paddingRight="@dimen/size_10"
            android:orientation="vertical">

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/size_5"
                android:paddingBottom="@dimen/size_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aty_smdevicestock_tvtx_cabinetname"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_10" />

                <TextView
                    android:id="@+id/txt_CabinetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:gravity="left"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_10" />


            </LinearLayout>
            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_5"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_AutoTest"
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_20"
                    android:background="@drawable/widget_btn_blue"
                    android:text="@string/btntx_autotest"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_10"/>

                <Button
                    android:layout_marginLeft="@dimen/size_10"
                    android:id="@+id/btn_ScanSlots"
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_20"
                    android:background="@drawable/widget_btn_green"
                    android:text="@string/btntx_scanslot"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:textSize="@dimen/sp_10"/>

                <Button
                    android:layout_marginLeft="@dimen/size_10"
                    android:id="@+id/btn_RefreshStock"
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_20"
                    android:background="@drawable/widget_common_btn"
                    android:text="@string/btntx_refreshstock"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_10"/>

                <Button
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/size_10"
                    android:id="@+id/btn_save"
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_20"
                    android:background="@drawable/widget_btn_orange"
                    android:text="@string/btntx_savedata"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_10"/>


            </LinearLayout>
            <ScrollView
                android:layout_width="fill_parent"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:scrollbars="vertical">
                <TableLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tl_CabinetSlot"/>
            </ScrollView>

        </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>