<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.uplink.selfstore.activity.InitDataActivity">


    <LinearLayout
        android:id="@+id/btn_appset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_200"
        android:paddingTop="@dimen/size_20"
        android:orientation="vertical">
    <com.uplink.selfstore.ui.my.MyListView
        android:id="@+id/list_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/dividerline"
        android:dividerHeight="1px"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none" />
    </LinearLayout>
    <com.uplink.selfstore.ui.LoadingView
        android:id="@+id/loading_ani"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/loading_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="260dp"
            android:layout_height="12dp"
            android:max="100"
            android:visibility="gone" />

        <TextView
            android:id="@+id/loading_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aty_initdata_tvtx_loadingmsg"
            android:textSize="@dimen/size_10" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="@dimen/size_78"
            android:layout_height="@dimen/size_20"
            android:layout_marginLeft="@dimen/size_4"
            android:layout_marginRight="@dimen/size_4"
            android:layout_marginTop="@dimen/size_8"
            android:background="@drawable/widget_common_btn"
            android:text="@string/aty_initdata_btntx_retry"
            android:textColor="@color/white"
            android:textSize="@dimen/size_10"
            android:visibility="invisible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size_10"
        android:paddingRight="@dimen/size_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/size_10"
            android:paddingTop="@dimen/sp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aty_initdata_tvtx_deviceid"
                android:textColor="@color/field_name"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:id="@+id/txt_deviceId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/field_value"
                android:textSize="@dimen/size_10" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size_10"
        android:paddingRight="@dimen/size_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/size_10"
            android:paddingTop="@dimen/sp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aty_initdata_tvtx_version"
                android:textColor="@color/field_name"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:id="@+id/txt_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/field_value"
                android:textSize="@dimen/size_10" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_appexit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_200"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>
