<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parentroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <include android:id="@+id/include"  layout="@layout/layout_nav_header" />


    <RelativeLayout
        android:id="@+id/layout_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ListView
                android:id="@+id/lv_Cabinets"
                android:layout_width="@dimen/size_60"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:divider="@null"
                android:fadingEdge="none"
                android:overScrollMode="never"
                android:scrollbars="none" />

            <LinearLayout
                android:background="@color/white"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/size_5"
                    android:paddingBottom="@dimen/size_5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aty_smdevicestock_tvtx_cabinetname"
                        android:textColor="@color/field_name"
                        android:textSize="@dimen/sp_10" />

                    <TextView
                        android:id="@+id/txt_CabinetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size_10"
                        android:gravity="left"
                        android:textColor="@color/field_value"
                        android:textSize="@dimen/sp_10" />


                </LinearLayout>
                <ScrollView
                    android:layout_width="fill_parent"
                    android:background="@color/white"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical">
                    <TableLayout
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tl_Slots"/>
                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_66"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer_border_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:gravity="center_vertical|center_horizontal"
                >

                <Button
                    android:id="@+id/btn_GoBack"
                    android:layout_width="@dimen/size_100"
                    android:layout_height="@dimen/size_36"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_round_primary"
                    android:text="@string/btntx_goback"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:gravity="center_vertical|center_horizontal"
                >

                <Button
                    android:id="@+id/btn_Handle"
                    android:layout_width="@dimen/size_100"
                    android:layout_height="@dimen/size_36"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_round_primary"
                    android:text="@string/btntx_replenished"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_12" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>